@@ -411,7 +411,6 @@ class HandleLoad():
 
             myGLOBALURN = self.format_GLOBALURN(self.URNPrefix, 'info.xsede.org', 'resource', 'google_spreadsheet', str(item['id']))
 
-
             if item['title'].lower() in self.COURSEDATA:
                 DATA = self.COURSEDATA[item['title'].lower()]
 
@@ -424,13 +423,15 @@ class HandleLoad():
                     DATA['ID'] = myGLOBALURN
 
                 # Merge the JSON data.
-                DATA['EntityJSON'] += json.dumps(item, cls=MissingTypeEncoder)
+#                DATA['EntityJSON'] += json.dumps(item, cls=MissingTypeEncoder)
+                DATA['EntityJSON'].append(item)
 
             # This course is unique in the Spreadsheet data, store it in COURSEDATA.
             else:
                 DATA = {}
                 DATA['ID'] = myGLOBALURN
-                DATA['EntityJSON'] = json.dumps(item, cls=MissingTypeEncoder)
+#                DATA['EntityJSON'] = json.dumps(item, cls=MissingTypeEncoder)
+                DATA['EntityJSON'] = [item]
 
             # All unique spreadsheet course data will be stored in the warehouse.
             DATA['store_to_warehouse'] = True
@@ -582,7 +583,8 @@ class HandleLoad():
             DATA['ID'] = myGLOBALURN
             DATA['LocalID'] = id_str
             DATA['LocalType'] = contype
-            DATA['EntityJSON'] = json.dumps(item, cls=MissingTypeEncoder)
+#            DATA['EntityJSON'] = json.dumps(item, cls=MissingTypeEncoder)
+            DATA['EntityJSON'] = item
             DATA['Name'] = item['training_name']
 
             if item['training_type'] == 'IN_PERSON':
@@ -667,7 +669,8 @@ class HandleLoad():
                             LocalURL = config.get('SOURCEDEFAULTURL', None),
                             CatalogMetaURL = self.CATALOGURN_to_URL(config['CATALOGURN']),
                             # Store the item's information appended to its parent's JSON information.
-                            EntityJSON = self.COURSEINFO[parent_id]['EntityJSON'] + json.dumps(item, cls=MissingTypeEncoder)
+#                            EntityJSON = self.COURSEINFO[parent_id]['EntityJSON'] + json.dumps(item, cls=MissingTypeEncoder)
+                            EntityJSON = [self.COURSEINFO[parent_id]['EntityJSON'], item]
                     )
                 local.save()
             except Exception as e:
